# task1

./: pyproject.toml
task1/task1/task1/: settings.py  urls.py
task2/task2/task2/: settings.py
task3/task3/task3/: asgi.py  settings.py  urls.py  wsgi.py
task4/task4/task4/: settings.py  urls.py
task5/task5/task5/: urls.py
task6/task6/: settings.py
